# issue-47048-fix

./: .travis.yml  Cargo.toml  LICENSE-MIT.md  README.md  build.rs  issue_47048_fix.c
src/: lib.rs
tests/: version_sync.rs
